RESOLVED FIXED220017
REGRESSION (r270938): ASSERTION FAILED: !m_renderThread in WebKit::RemoteAudioDestinationProxy::startRenderingThread
https://bugs.webkit.org/show_bug.cgi?id=220017
Summary REGRESSION (r270938): ASSERTION FAILED: !m_renderThread in WebKit::RemoteAudi...
Ryan Haddad
Reported 2020-12-18 09:43:38 PST
Seeing the following on Mojave debug bots after https://trac.webkit.org/changeset/270938/webkit TestWebKitAPI.GPUProcess.WebProcessTerminationAfterTooManyGPUProcessCrashes _RegisterApplication(), FAILED TO establish the default connection to the WindowServer, _CGSDefaultConnection() is NULL. ASSERTION FAILED: !m_renderThread /Volumes/Data/slave/mojave-debug/build/Source/WebKit/WebProcess/GPU/media/RemoteAudioDestinationProxy.cpp(79) : void WebKit::RemoteAudioDestinationProxy::startRenderingThread() 1 0x461e0d2e9 WTFCrash 2 0x430003e6b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x4319ab944 WebKit::RemoteAudioDestinationProxy::startRenderingThread() 4 0x4319ab88c WebKit::RemoteAudioDestinationProxy::connectToGPUProcess() 5 0x4319acc59 WebKit::RemoteAudioDestinationProxy::gpuProcessConnectionDidClose(WebKit::GPUProcessConnection&) 6 0x4318ce5cc WebKit::GPUProcessConnection::didClose(IPC::Connection&) 7 0x43009afdf IPC::Connection::connectionDidClose()::$_7::operator()() 8 0x43009aee9 WTF::Detail::CallableWrapper<IPC::Connection::connectionDidClose()::$_7, void>::call() 9 0x461e3881a WTF::Function<void ()>::operator()() const 10 0x461eb73a6 WTF::RunLoop::performWork() 11 0x461ebba4e WTF::RunLoop::performWork(void*) 12 0x7fff51aac683 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 13 0x7fff51aac629 __CFRunLoopDoSource0 14 0x7fff51a8ffeb __CFRunLoopDoSources0 15 0x7fff51a8f5b5 __CFRunLoopRun 16 0x7fff51a8eebe CFRunLoopRunSpecific 17 0x7fff53cf37df -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 18 0x7fff53cf36b4 -[NSRunLoop(NSRunLoop) run] 19 0x7fff7dc1e077 _xpc_objc_main 20 0x7fff7dc1db79 _xpc_copy_xpcservice_dictionary 21 0x430c7d0b7 WebKit::XPCServiceMain(int, char const**) 22 0x43213e2db WKXPCServiceMain 23 0x109138e82 main 24 0x7fff7d9e53d5 start _RegisterApplication(), FAILED TO establish the default connection to the WindowServer, _CGSDefaultConnection() is NULL. _RegisterApplication(), FAILED TO establish the default connection to the WindowServer, _CGSDefaultConnection() is NULL. LEAK: 1 WebProcessPool LEAK: 1 WebPageProxy /Volumes/Data/slave/mojave-debug/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/GPUProcess.mm:182 Expected equality of these values: webViewPID Which is: 72453 [webView _webProcessIdentifier] Which is: 72459 https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.GPUProcess.WebProcessTerminationAfterTooManyGPUProcessCrashes
Attachments
Patch (1.80 KB, patch)
2020-12-18 09:53 PST, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2020-12-18 09:44:43 PST
Chris Dumez
Comment 2 2020-12-18 09:46:00 PST
Looking.
Chris Dumez
Comment 3 2020-12-18 09:53:23 PST
EWS
Comment 4 2020-12-18 11:16:43 PST
Committed r270980: <https://trac.webkit.org/changeset/270980> All reviewed patches have been landed. Closing bug and clearing flags on attachment 416526 [details].
Note You need to log in before you can comment on or make changes to this bug.